<resources>
    <string name="app_name">Beber Água - Lembrete</string>
    <string name="hint_peso">Seu Peso (Kg)</string>
    <string name="hint_idade">Sua Idade</string>
    <string name="text_button_calcular">Calcular ingestão de água</string>
    <string name="text_button_lembrete">Lembrete</string>
    <string name="txt_button_alarme">Alarme</string>
    <string name="text_hora">00</string>
    <string name="dois_pontos">:</string>
    <string name="txt_minutos">00</string>
    <string name="toast_informe_peso">Informe seu peso</string>
    <string name="toast_informe_idade">Informe sua idade</string>
    <string name="dialog_title">Redefinir Dados</string>
    <string name="dialog_message">Deseja excluir todos os dados existentes</string>
    <string name="alarm_message">Hora de beber água</string>


</resources>