<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    
    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/bebaagua"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintStart_toStartOf="@id/container_header"
        />

    <ImageView
        android:id="@+id/ic_redefinir"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintEnd_toEndOf="@+id/container_header"
        />
    
    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:padding="15dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColorHint="@android:color/holo_blue_dark"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        />

    <EditText
        android:id="@+id/edit_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_idade"
        android:padding="15dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColorHint="@android:color/holo_blue_dark"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toEndOf="@id/edit_peso"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bit_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text_button_calcular"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@drawable/bg_degrade_button"
        app:layout_constraintTop_toBottomOf="@id/edit_peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
    <View
        android:id="@+id/container_result_ml"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/container_result_ml"
        app:layout_constraintTop_toBottomOf="@id/bit_calcular"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txt_resultado_ml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/container_result_ml"
        app:layout_constraintStart_toStartOf="@id/container_result_ml"
        app:layout_constraintEnd_toEndOf="@id/container_result_ml"
        app:layout_constraintBottom_toBottomOf="@+id/container_result_ml"
        />

    <Button
        android:id="@+id/bt_definir_lembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/container_result_ml"
        android:text="@string/text_button_lembrete"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"

        />

    <Button
        android:id="@+id/bt_definir_alarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/container_result_ml"
        android:text="@string/txt_button_alarme"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />
    
    <TextView
        android:id="@+id/txt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hora"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/bt_definir_lembrete"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dois_pontos"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/bt_definir_lembrete"
        app:layout_constraintStart_toEndOf="@+id/txt_hora"
        />

    <TextView
        android:id="@+id/txt_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_minutos"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/bt_definir_lembrete"
        app:layout_constraintStart_toEndOf="@+id/txt_dois_pontos"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>